ref/R_6 Master Key System için sayfa eklendi.

--- a/index.html
+++ b/index.html
@@ -154,6 +154,27 @@
                 <li>
 					<p>
 						<div class="date-time-iso-8601">
+						2023-06-29
+						</div>
+						<div>
+						Ana Anahtar Sistemi (Master Key System, Charles F. Haanel)
+							<br/>
+						(Çeviriye başlanmadı)
+						</div>
+						<div>
+							<a href="./ref/R_6/R_6.html">
+							( Link )
+							</a>
+						</div>
+						<div class="tag-list">
+						Tags: ("kitap" ;"çeviri" ;"book" ;"translation")
+						</div>
+					</p>
+				</li>
+                
+                <li>
+					<p>
+						<div class="date-time-iso-8601">
 						2023-04-14
 						</div>
 						<div>
