ref/R_6 İçindekiler kısmında parçaların çevirilmediği belirtildi

--- a/ref/R_6/R_6.html
+++ b/ref/R_6/R_6.html
@@ -65,11 +65,11 @@
     
     <h3 id="HEAD_2">İçindekiler</h3>
     <ul>
-    <li><a href="./PsiTekTMKS1.html">Giriş</a></li>
-    <li><a href="./PsiTekTMKS2.html">Önsöz</a></li>
-    <li><a href="./PsiTekTMKS3.html">1. Parça Ders</a></li>
-    <li><a href="./PsiTekTMKS4.html">1. Parça Cevaplı Çalışma Soruları</a></li>
-    <li><a href="./PsiTekTMKS5.html">2. Parça Ders</a></li>
+    <li><a href="./PsiTekTMKS1.html">Giriş</a> (Çevirilmedi)</li>
+    <li><a href="./PsiTekTMKS2.html">Önsöz</a> (Çevirilmedi)</li>
+    <li><a href="./PsiTekTMKS3.html">1. Parça Ders</a> (Çevirilmedi)</li>
+    <li><a href="./PsiTekTMKS4.html">1. Parça Cevaplı Çalışma Soruları</a> (Çevirilmedi)</li>
+    <li><a href="./PsiTekTMKS5.html">2. Parça Ders</a> (Çevirilmedi)</li>
     </ul>
     <hr>
     
