Zengin olmanın bilimi ref/R_9 eklendi ; website references güncellendi.

--- a/index.html
+++ b/index.html
@@ -177,6 +177,27 @@
                 <li>
 					<p>
 						<div class="date-time-iso-8601">
+						2023-07-18
+						</div>
+						<div>
+						Zengin Olmanın Bilimi (The Science of Getting Rich, Wallace D. Wattles)
+							<br/>
+						(Çeviriye başlanmadı)
+						</div>
+						<div>
+							<a href="./ref/R_9/R_9.html">
+							( Link )
+							</a>
+						</div>
+						<div class="tag-list">
+						Tags: ("kitap" ;"çeviri" ;"book" ;"translation")
+						</div>
+					</p>
+				</li>
+                
+                <li>
+					<p>
+						<div class="date-time-iso-8601">
 						2023-04-14
 						</div>
 						<div>
