Added Twitter link to homepage.

--- a/index.html
+++ b/index.html
@@ -51,16 +51,20 @@
 				<a href="https://github.com/armagansalman">
 				Github
 				</a>
-			</div>
-            
-			<div>
-                ☉
+				☉
 				<a href="https://tr.linkedin.com/in/arma%C4%9Fan-salman-13163b124?trk=public_profile_browsemap">
 				Linkedin
 				</a>
+			</div>
+                
+			<div>
 				☉
 				<a href="https://www.youtube.com/channel/UCm6XgnmREmRVpJ6SrpzUmqQ/playlists">
 				Youtube
+				</a>
+				☉
+				<a href="https://twitter.com/ArmaganSalman1">
+				Twitter
 				</a>
 				☉
 				<a href="https://www.facebook.com/profile.php?id=100055965090473">
