Changed Various Items headline to References on homepage

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         
         <section id="SEC_7" style="text-align: center">
 			<h3 id="HEAD_7">
-			Various Items
+			References
 			</h3>
 			<a href="./ref/R_5/R_5.html">
 			( Link )
