Added Amazon-scraper to homepage

--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
 			My Work
 			</h3>
 			<ul>
+				
+				<li>
+					<p>
+						<div class="date-time-iso-8601">
+						2023-10-04
+						</div>
+						<div>
+						Amazon-scraper (Retrieves product data using ASIN codes)
+						</div>
+						<div>
+							<a href="https://github.com/armagansalman/Amazon-scraper">
+							( Link )
+							</a>
+						</div>
+						<div class="tag-list">
+						Tags: ("yazılım" ;"software" ;"python3")
+						</div>
+					</p>
+				</li>
+				
 				<li>
 					<p>
 						<div class="date-time-iso-8601">
