Çevirildi: R_2.html ch.4:p.4

--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-		<!-- <base href="https://armagansalman.github.io"> -->
-		<!-- TODO(armagan): Do not use relative file path for styles (or any file).
-        Use www.armagansalman.one when it has a dedicated server, not Github.
-     -->
+
 		<link href="./file/styles.css" rel="stylesheet"/>
 		<link href="./img/Monad.jpg" rel="icon" type="image/jpg"/>
-		<!-- TODO(Use personal domain instead of github for internal links when https is used on personal server) http://www.armagansalman.one -> https://armagansalman.github.io  -->
+		
 		<style>
 		</style>
+		
 		<title>
 		Armağan Salman's Website
 		</title>
+		
 	</head>
 	<body>
 		<section id="SEC_1">
@@ -22,15 +21,13 @@
 				Armağan Salman's Website
 			</h2>
 			<p>
-				☉ Welcome, this is my personal website.
-				
                 <p>
-				☉ Contact:
+				☉ İletişim (Contact):
 					<br/>
 				E-mail address (gmail) = armagansalman
 				</p>
                 <p>
-				☉ If you want to support me:
+				☉ Beni desteklemek isterseniz (If you want to support me):
 					<br/>
 				Patreon = patreon.com/user?u=94872666
 				</p>
