Çevirildi: R_2.html ch.4:p.5

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -669,11 +669,10 @@
     </p>
     
     <p id="ch.4:p.5">
-      The weakest soul, knowing its own weakness, and believing this truth ’that 
-      strength can only be developed by effort and practice, will, thus believing, 
-      at once begin to exert itself, and, adding effort to effort, patience to 
-      patience, and strength to strength, will never cease to develop, and will 
-      at last grow divinely strong.
+		En zayıf ruh, kendi zayıflığını bilerek, ve gücün yalnızca efor ve pratik ile
+		geliştirilebileceği gerçeğine inanıp, böylece inanarak, birdenbire kendini
+		kullanmaya başlar, ve, efor üstüne efor, sabır üstüne sabır, güç üstüne güç
+		katarak, gelişmeyi asla bırakmaz, ve sonunda ilahi bir güce kavuşur. 
     </p>
     
     <p id="ch.4:p.6">
