--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -676,9 +676,9 @@
     </p>
     
     <p id="ch.4:p.6">
-      As the physically weak man can make himself strong by careful and patient 
-      training, so the man of weak thoughts can make them strong by exercising 
-      himself in right thinking.
+		Fiziksel olarak zayıf olan birinin dikkatli ve sabırlı bir eğitimle kendini
+		güçlü yapabileceği gibi, zayıf düşüncelere sahip biri doğru düşünerek
+		düşüncelerini güçlü yapabilir.
     </p>
     
     <p id="ch.4:p.7">
