R_2.html ch.4 için çeviri tamamlanmadı kısmı kaldırıldı.

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -69,7 +69,7 @@
     <li><a href="#ch.1">Düşünce ve Karakter</a></li>
     <li><a href="#ch.2">Düşüncenin Durumlar Üzerine Etkisi</a></li>
     <li><a href="#ch.3">Düşüncenin Sağlık ve Vücut Üzerine Etkisi</a></li>
-    <li><a href="#ch.4">Düşünce ve Amaç</a>(Çeviri Tamamlanmadı)</li>
+    <li><a href="#ch.4">Düşünce ve Amaç</a></li>
     <li><a href="#ch.5">Başarıda Düşünce Faktörü</a>(Çeviri Tamamlanmadı)</li>
     <li><a href="#ch.6">Vizyonlar ve İdealler</a>(Çeviri Tamamlanmadı)</li>
     <li><a href="#ch.7">Huzur</a>(Çeviri Tamamlanmadı)</li>
