Lena151 video link added to ref/R_7/R_7.html

--- a/ref/R_2/R_2.html
+++ b/ref/R_2/R_2.html
@@ -722,6 +722,8 @@
     
         <h3 id="ch.5">5. The Thought-Factor in Achievement</h3>
     <p id="ch.5:p.1">
+		Kişinin elde ettiklerinin ve elde edemediklerinin TÜMÜ kişinin kendi düşüncelerinin
+		direkt sonucudur. 
       ALL that a man achieves and all that he fails to achieve is the direct result 
       of his own thoughts. In a justly ordered universe, where loss of equipoise 
       would mean total destruction, individual responsibility must be absolute. A 
