--- a/ref/R_7/R_7.html
+++ b/ref/R_7/R_7.html
@@ -20,13 +20,22 @@
     <hr>
     
     <ul>
-	<li>
-		<p id="id:2023-02-27_1">
-			<div class="date-time-iso-8601">2023-02-27 ;1</div>
-			<div>Chosen id attribute value format:</div>
-			<div>id:2023-02-27_1</div>
-		</p>
-	</li>
+
+		<li>
+			<p id="id:2023-10-11_1">
+				<div class="date-time-iso-8601">2023-10-11 ;1</div>
+				<div>A Reversing Tutorial For Newbies by lena151 all 40 Videos in HD</div>
+				<div><a href="https://www.youtube.com/watch?v=wqzZB31zDSs&list=PLcFUp5WYCxVYeR7AgsmjzGW6PjamaY6JO">( Youtube link )</a></div>
+			</p>
+		</li>
+
+		<li>
+			<p id="id:2023-02-27_1">
+				<div class="date-time-iso-8601">2023-02-27 ;1</div>
+				<div>Chosen id attribute value format:</div>
+				<div>id:2023-02-27_1</div>
+			</p>
+		</li>
 	
       <li>
 		  <p id="id:2022-06-13_3">
