Updated patreon url on main webpage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>
 				☉ Beni desteklemek isterseniz (If you want to support me):
 					<br/>
-				Patreon = patreon.com/user?u=94872666
+				Patreon = patreon.com/armagansalman
 				</p>
 			</p>
 			<hr/>
