Added Cheat Engine table for Spellforce Platinum to main webpage.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,25 @@
 				<li>
 					<p>
 						<div class="date-time-iso-8601">
+						2023-09-28
+						</div>
+						<div>
+						Cheat Engine table for the game Spellforce Platinum
+						</div>
+						<div>
+							<a href="https://fearlessrevolution.com/viewtopic.php?t=16052">
+							( Link )
+							</a>
+						</div>
+						<div class="tag-list">
+						Tags: ("Cheat Engine" ;"Cheat Table" ;"x86 Assembly")
+						</div>
+					</p>
+				</li>
+				
+				<li>
+					<p>
+						<div class="date-time-iso-8601">
 						2023-01-21
 						</div>
 						<div>
