--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
 							<a href="https://fearlessrevolution.com/viewtopic.php?t=16052">
 							( Link )
 							</a>
+							<br/>
+							<a href="./file/SpellForce Platinum base stats, Steam, version 1.61.10180, 2023-09-28.CT">
+								( Direct link to cheat table )
+							</a>
 						</div>
 						<div class="tag-list">
 						Tags: ("Cheat Engine" ;"Cheat Table" ;"x86 Assembly")
@@ -112,7 +116,7 @@
 							</a>
 						</div>
 						<div class="tag-list">
-						Tags: ("yazılım" ;"software" ;"python3")
+						Tags: ("yazılım" ;"software" ;"Python3")
 						</div>
 					</p>
 				</li>
