--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 				</p>
                 <p>
 				☉ Beni desteklemek isterseniz (If you want to support me):
-					<br/>
+				<br/>
 				Patreon = patreon.com/armagansalman
+				<br/>
+				Bitcoin = bc1qphjhl65vp9ua8nuxjpcs5wueg9phannfryhwa9
 				</p>
 			</p>
 			<hr/>
