R_9 ch.17-p.5 çevirildi. index.html'e R_9 linki eklendi.

--- a/index.html
+++ b/index.html
@@ -150,6 +150,27 @@
                 <li>
 					<p>
 						<div class="date-time-iso-8601">
+						2024-03-03
+						</div>
+						<div>
+						Zengin Olma Bilimi, (Wallace D. Wattles)
+							<br/>
+						(Çeviri tamamlanmadı)
+						</div>
+						<div>
+							<a href="./ref/R_9/R_9.html">
+							( Link )
+							</a>
+						</div>
+						<div class="tag-list">
+						Tags: ("kitap" ;"çeviri" ;"book" ;"translation")
+						</div>
+					</p>
+				</li>
+                
+                <li>
+					<p>
+						<div class="date-time-iso-8601">
 						2022-06-12
 						</div>
 						<div>
