Zengin Olma Bilimi kısmına eserin orijinal ismi eklendi.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						2024-03-03
 						</div>
 						<div>
-						Zengin Olma Bilimi, (Wallace D. Wattles)
+						Zengin Olma Bilimi (The Science of Getting Rich, Wallace D. Wattles)
 							<br/>
 						(Çeviri tamamlanmadı)
 						</div>
