--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 						2024-03-03
 						</div>
 						<div>
-						Zengin Olma Bilimi (The Science of Getting Rich, Wallace D. Wattles)
+						Zengin Olma Bilimi 
+                        <br/>(The Science of Getting Rich, Wallace D. Wattles)
 							<br/>
 						(Çeviri tamamlanmadı)
 						</div>
@@ -174,7 +175,8 @@
 						2022-06-12
 						</div>
 						<div>
-						İnsanın Düşündüğü Şekilde (As a man thinketh, James Allen)
+						İnsanın Düşündüğü Şekilde 
+                        <br/>(As a man thinketh, James Allen)
 							<br/>
 						(Çeviri tamamlanmadı)
 						</div>
