R_9 yazım hatası giderildi.

--- a/ref/R_9/R_9.html
+++ b/ref/R_9/R_9.html
@@ -153,7 +153,7 @@
     <p id="ch.17-p.8">
         Kendinin olan ona geldiğinde alabilmesi için kişi aktif olmalıdır. Bu 
         aktivite, kişinin şimdiki yerini fazlasıyla doldurmasından meydana gelir.
-        Zihinsel imajının gerçekleşmesiyle zengin alma Niyetini aklında tutmak 
+        Zihinsel imajının gerçekleşmesiyle zengin olma Niyetini aklında tutmak 
         zorundadır. Her gün, her bir eylemi başarılı bir biçimde yapmaya özen 
         göstererek, o gün yapılabileceklerin hepsini yapmak zorundadır. 
         Kişi aldığı nakit değerden fazla bir kullanım değerini herkese vermek zorundadır. 
